--- a/src/components/css/Login.css
+++ b/src/components/css/Login.css
@@ -27,7 +27,7 @@ label{
 input{
     width: 60%;
     height: 20px;
-    background: #e0dede;
+    background: #dad1d1;
     justify-content: center;
     display: flex;
     margin: 20px auto;
