--- a/src/components/css/Login.css
+++ b/src/components/css/Login.css
@@ -1,24 +1,26 @@
-body{
+
+.loginCard{
     display: flex;
-}
-.main{
-    width: 350px;
-    height: 500px;
-    background: red;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
     overflow: hidden;
-    background: linear-gradient(45deg, #2f4680,#500ae4);
     border-radius: 10px;
-    box-shadow: 5px 20px 50px #000;
-    display: flex;
+    padding: 0px ;
+    
+    
 }
 .login{
-    position: relative ;
-    width: 100%;
-    height: 100%;
+    padding: 2rem;
+    border-radius: 10px;
+    width: 600px;
+    height: 600px;
+    text-align: center;
+    
 }
 label{
     color: #fff;
-    font-size: 2.3em;
+    font-size: 3em;
     justify-content: center;
     display: flex;
     margin: 60px;
@@ -36,9 +38,9 @@ input{
     outline: none;
     border-radius: 5px; 
 }
-button{
-    width: 20%;
-    height: 30px;
+#btn1{
+    width: 30%;
+    height: 50px;
     margin: 10px auto;
     justify-content: center;
     display: block;
@@ -53,6 +55,6 @@ button{
     cursor: pointer;
 
 }
-button:hover{
+#btn1:hover{
     background: #6d44b8; 
 }
