--- a/src/components/css/Header.css
+++ b/src/components/css/Header.css
@@ -1,4 +1,4 @@
-.main{  
+.main{ 
     max-width: 100%;
     margin: 0px auto;
     padding: 0px 15px;
@@ -16,6 +16,7 @@
     width: 100%;
     justify-content: space-between;
     align-items: center;
+
 }
 #btn2{
     width: 10%;
@@ -33,8 +34,11 @@
 #btn2:hover{
     background: #6d44b8; 
 }
+.link{
+    text-decoration: none;
+}
 .title{
     color: #fff;
-    font-size: 38px;
+    font-size: 50px;
     font-weight: 400;
 }
